[metadata]
name = mvx-stl
version = attr:signal_tl.__version__
description =  A library for efficiently working with Signal Temporal Logic (STL) and its quantitative semantics.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, LICENSE-3rdParty

author = Hee Jong Park
author_email = hee.jong.park@dnv.com
url = <url>

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
zip_safe = False
packages = find:
python_requires = >= 3.9, < 3.12
